feat: Improve custom executor handling and sandbox support